Polish (uniform white space, padding added to best sellers cards). Fixed arrow placement on news-slideshow - no longer expands past wrapper boundaries. Button size for Best Sellers Cards now set to fit-content.

--- a/dev/scss/_best-sellers.scss
+++ b/dev/scss/_best-sellers.scss
@@ -7,7 +7,7 @@
     text-align: left;
     width: 90%;
     margin: 0;
-    
+    padding-left: 1rem;  
     h1 {
         width: 100%;
         margin: 0;
@@ -47,8 +47,7 @@
             grid-area: c;
             text-align: center;
             white-space: nowrap;
-            width: 100%;
-            margin: 5%;
+            width: fit-content;
             padding: 5px 10px;
             border-radius: 5px;
             border: 0;
@@ -67,7 +66,8 @@
         justify-content: space-around;
         text-align: center;
         width: 100%;
-        margin: 0 -10px;
+        margin: 10px -10px;
+    
 
         h2 {
             width: 100%;
@@ -88,7 +88,7 @@
             margin: 0 10px 20px;
 
             button {
-                width: 50%;
+                width: fit-content;
                 height: 10%;
             }
         }
