--- a/dev/scss/_news-slideshow.scss
+++ b/dev/scss/_news-slideshow.scss
@@ -1,11 +1,24 @@
 //CSS for class "slideshow-carousel-news"
 .slideshow-carousel-news {
     overflow: hidden;
-    margin: 10%;
+    margin-top: 3rem;
     h1{
         text-align: center;
     }
+
+    .wrapper {
+        position: relative;
+        max-width: 100%;
+        margin-bottom: 5rem;
+    }
+
+    .slick-slider{
+        width: 80%;
+        margin: 0 auto;
+    }
+
 }
+
 
 .slick-slide {
     margin: 0px 20px;
@@ -15,15 +28,17 @@
     border: 10px solid rgb(255, 145, 0);
     display: block;
     padding: 8px;
-    width: 25px;
-    height: 25px;
+    width: 1rem;
+    height: 1rem;
     border-bottom: 0;
     border-right: 0;
     position: absolute;
+    z-index: 10000;
 }
 
+
 .arrow.n {
-    right: 3rem;
+    right: 3rem;   
     transform: rotate(135deg);
 }
 
@@ -34,8 +49,9 @@
 
 @media (max-width: 500px) {
     .slideshow-carousel-news {
-        padding: 10%;
-        margin: 10%;
+        padding: 5%;
+        margin: 5%;
+        height: fit-content;
 
         .news-carousel-container {
             display: flex;
@@ -48,9 +64,10 @@
             img {
                 width: 100%;
                 height: 100%;
-                padding: 5%;
+                padding: 10%;
                 object-fit: cover;
             }
+
         }
 
         .arrow {
@@ -59,12 +76,4 @@
     }
 
 }
-@media (min-width: 1416px){
-    .arrow.n {
-        right: 11rem;
-    }
-    
-    .arrow.p {
-        left: 11rem;
-    }
-}
+
