--- a/dev/scss/_shopby-slideshow.scss
+++ b/dev/scss/_shopby-slideshow.scss
@@ -3,6 +3,7 @@
 .slideshow-carousel-shop-by {
   padding: 0;
   margin: 0;
+  margin-bottom: 2rem;
   .arrow {
     display: none;
   }
@@ -99,8 +100,8 @@
         border: 10px solid rgb(255, 145, 0);
         display: block;
         padding: 8px;
-        width: 25px;
-        height: 25px;
+        width: 1rem;
+        height: 1rem;
         border-bottom: 0;
         border-right: 0;
         position: absolute;
