--- a/dev/scss/_showcase-slideshow.scss
+++ b/dev/scss/_showcase-slideshow.scss
@@ -2,6 +2,7 @@
 .slideshow-carousel-showcase{
   position: relative;
   z-index: 1;
+  margin-bottom: 4.5rem;
     .slide_wrapper {
         position: relative;
         max-width: 100%;
