--- a/dev/scss/_utility-card.scss
+++ b/dev/scss/_utility-card.scss
@@ -23,24 +23,33 @@
     font-size: 200%;
     margin-left: 2rem;
     margin-top: 1.5rem;
+    
   }
+  
+
   
   .email-social {
     align-items: center;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    align-items:start;
     margin: -2.75rem 2rem 0;
     position: relative;
     width: auto;
     height: 5rem;
+
+    h6{
+      margin:0;
+      margin-left: 0.3rem;
+    }
   }
 
   @media (max-width: 600px) {
     .email-social {
       justify-content: flex-start;
       margin: 2.75em 0rem 0;
-      margin-top: -7px;
+      margin-top: 1.5rem;
       vertical-align: top;
     }
   }
